# node-mac-permissions

./: .npmignore  CMakeLists.txt  package-lock.json  package.json
.build/: pre-release.sh
.github/workflows/: ci.yml  snapshot_release.yaml  tagged_release.yaml
src/: impl.h  permissions.mm
test/: module.spec.js
